--- a/global-scoreboard/src/Dashboard/QuickView/QuickView.css
+++ b/global-scoreboard/src/Dashboard/QuickView/QuickView.css
@@ -2,6 +2,10 @@ td:last-child .btn.btn-link {
   padding: 0;
 }
 
+td:last-child .btn.btn-link:last-child {
+  float: right;
+}
+
 .table-responsive-lg {
   width: 100%;
 }
